groups: fix misaligned buttons in lists
Closes #85.

--- a/gitlab.user.styl
+++ b/gitlab.user.styl
@@ -5055,13 +5055,7 @@
         &:hover { c: 0 0 hl }
         // Text colors and width.
         .last-updated { c: fg }
-        .stats {
-          c: cm;
-          .stat-value {
-            min-width: 1.5rem;
-            text-align: left;
-          }
-        }
+        .stats { c: cm }
         &.has-more-items { padding: 10px; }
       }
     }
